RESOLVED FIXED82109
[chromium] Fix race bug that clobbers CCLayerImpl updateRect
https://bugs.webkit.org/show_bug.cgi?id=82109
Summary [chromium] Fix race bug that clobbers CCLayerImpl updateRect
Shawn Singh
Reported 2012-03-23 17:52:50 PDT
If the main thread commits twice before the impl thread actually draws, then the updateRect of the first frame gets lost forever, and not propagated to the damage tracker. The solution is to accumulate the updateRect. The updateRect is already being correctly cleared at the appropriate time after drawing. Patch coming in a moment.
Attachments
Patch (5.01 KB, patch)
2012-03-23 17:56 PDT, Shawn Singh
dpranke: review+
Shawn Singh
Comment 1 2012-03-23 17:56:49 PDT
Vangelis Kokkevis
Comment 2 2012-03-23 18:08:25 PDT
This looks good to me. Alas, you'll have to get a WK reviewer to sign off on it.
Shawn Singh
Comment 3 2012-03-23 18:28:33 PDT
Adrienne Walker
Comment 4 2012-03-23 18:42:06 PDT
Comment on attachment 133600 [details] Patch How do we commit twice? I though the main thread was supposed to wait for BFAC before committing again?
Shawn Singh
Comment 5 2012-03-23 19:00:54 PDT
I don't know. Perhaps Nat can suggest why? I can say however, that fprintfs clearly show that TreeSynchronizer::synchronizeTrees() does commonly occur twice in a row before CCLayerTreeHostImpl::drawLayers() completes once. I agree this is a question we should find the answer. =)
Dana Jansens
Comment 6 2012-03-23 19:37:27 PDT
Are there accelerated animations on your test?
Note You need to log in before you can comment on or make changes to this bug.