[chromium] Fix race bug that clobbers CCLayerImpl updateRect https://bugs.webkit.org/show_bug.cgi?id=82109

Reviewed by Dirk Pranke.

Source/WebCore:

If the main thread commits twice before the impl thread actually
draws, then the updateRect of the first frame gets lost forever,
and not propagated to the damage tracker.

The solution is to accumulate the updateRect. The CCLayerImpl
updateRect is already being correctly cleared at the appropriate
time after drawing.

Unit test added to LayerChromiumTest.cpp.

* platform/graphics/chromium/LayerChromium.cpp:
(WebCore::LayerChromium::pushPropertiesTo):

Source/WebKit/chromium:

* tests/LayerChromiumTest.cpp:

Canonical link: https://commits.webkit.org/99424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111963 268f45cc-cd09-0410-ab3c-d52691b4dbfc